Clarified v2.0.10 Fix header button spacing
"Viewing your list" and other buttons in the top right of the header were mis-aligned by 6 pixels.

--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v2.0.9
+ * v2.0.10
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -274,7 +274,6 @@ body::after {
 	top: 15px !important;
 	right: 15px;
 	display: flex;
-	padding: 6px;
 	opacity: 0.25;
 	transition: opacity .5s ease-out;
 }
